fix instructions overflowing on smaller sceens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	max-height: fit-content;
+	overflow-x: hidden;
 }
 
 main {
@@ -37,6 +38,7 @@ main {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	overflow-x: hidden;
 }
 /* Player boxes */
 .player {
@@ -127,7 +129,7 @@ main {
 	z-index: 10; /* Make sure it appears on top of the game score */
 	transform: rotate(-25deg); /* Rotate the text by -25 degrees to make it vertical */
 }
-
+/* instructions while playing */
 .instruction {
 	font-size: 2.5rem;
 	margin-bottom: 1rem;
@@ -216,6 +218,9 @@ main {
 	justify-content: center;
 	align-items: center;
 	z-index: 100;
+	max-width: 100%;
+	max-height: 100%;
+	overflow: hidden;
 }
 
 .instructions-content {
@@ -226,6 +231,9 @@ main {
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	text-align: center;
+	max-width: 80%;
+	max-height: 80%; /* Adjust the maximum height to 80% */
+	overflow: hidden;
 }
 
 #close-instructions {
@@ -241,18 +249,15 @@ main {
 	display: flex;
 	justify-content: space-around;
 	margin-top: 10px;
+	gap: 10px;
 }
 
 .hidden {
 	display: none;
 }
-/* Media Query for screens below 900px */
-@media (max-width: 920px) {
-	main {
-		max-height: 350px;
-	}
-}
-@media (max-width: 920px) {
+
+/* Media Query for screens below 940px */
+@media (max-width: 940px) {
 	html {
 		font-size: 50%;
 		box-sizing: border-box;
@@ -278,7 +283,9 @@ main {
 
 		margin-top: -5px;
 	}
-
+	.instructions-content {
+		max-height: 120%;
+	}
 	.player {
 		margin: 1rem 0;
 	}
@@ -344,10 +351,9 @@ main {
 		margin-top: -100px;
 		margin-bottom: 0;
 		backdrop-filter: blur(0px);
-		max-height: 600px;
 	}
 	body {
-		margin-top: 0px;
+		margin-top: 10px;
 	}
 	.game-name {
 		font-size: 3rem;
@@ -359,10 +365,16 @@ main {
 		padding: 0.5rem 2rem;
 		margin-top: -50px;
 	}
+	.instructions-popup {
+		width: 100%;
+	}
 	.player {
 		padding-bottom: 0;
 	}
 	.total-par {
 		width: 150px;
+	}
+	.final-data {
+		width: 550px;
 	}
 }
